MCA App/Release/MCA Dev Org/src/objects/Assignment_Rule__c.object
<CustomObject>
    <description>The Assignment Rule object handles the assignment and reassignment of leads.</description>
    <fields>
        <fullName>Assigned_to_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned to User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assignment_Rule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_to__c</fullName>
        <label>Assigned to</label>
        <picklist>
            <picklistValues>
                <fullName>Queue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assigned_to_lookup_queue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned to Queue</label>
        <referenceTo>LCA__Queue__c</referenceTo>
        <relationshipLabel>Assignment Rule</relationshipLabel>
        <relationshipName>Assignment_Rule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignment_Template__c</fullName>
        <label>Assignment Template</label>
        <referenceTo>Assignment_Template__c</referenceTo>
        <relationshipLabel>Assignment Rule</relationshipLabel>
        <relationshipName>Assignment_Rule</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Logic__c</fullName>
        <label>Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Assignment Rule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Assignment Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignment Rule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Select_UserOrQueue</fullName>
        <active>true</active>
        <description>Validation rule, to the user has to choose a user on the lookup and the picklist, or a queue on the lookup and the picklist.</description>
        <errorConditionFormula>OR( AND( ISPICKVAL( Assigned_to__c ,&quot;User&quot;),  !ISBLANK(Assigned_to_lookup_queue__c) ), AND( ISPICKVAL(Assigned_to__c , &quot;Queue&quot;),  !ISBLANK(Assigned_to_User__c ) ))</errorConditionFormula>
        <errorMessage>Please select appropriate values in Assign to picklist &amp; Lookup</errorMessage>
    </validationRules>
</CustomObject>